--- a/web/package.json
+++ b/web/package.json
@@ -35,5 +35,8 @@
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.10.1",
     "webpack-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.13.1"
   }
 }
