iOS in progress cut

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,17 +3,21 @@ platform :ios, '8.4'
 use_frameworks!
 
 def all_pods
-    pod 'GoogleMaps'
-    pod 'Google/Analytics', '~>1.0.0'
-    pod 'GoogleSignIn', '~> 2.1'
+    pod 'GoogleMaps',       '>= 1.10.3'
+    pod 'Google/Analytics', '>= 1.1.0'
+    pod 'GoogleSignIn',     '>= 2.2.0'
     
-    pod 'FBSDKCoreKit'
-    pod 'FBSDKLoginKit'
+    pod 'FBSDKCoreKit',     '>= 4.8.0'
+    pod 'FBSDKLoginKit',    '>= 4.8.0'
     
-    pod 'DZNEmptyDataSet'
+    pod 'Firebase',         '>= 2.4.3'
+    pod 'GeoFire',          '>= 1.1.2'
     
-    pod 'Alamofire', '~> 1.3'
-    pod 'SwiftyJSON', '~> 2.2'
+    pod 'DZNEmptyDataSet',  '>= 1.7.2'
+    
+    pod 'Alamofire',        '>= 3.1.3'
+    pod 'SwiftyJSON',       '>= 2.3.0'
+    
 end
 
 target 'Hunger Free City' do
