--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,20 +3,20 @@ platform :ios, '8.4'
 use_frameworks!
 
 def all_pods
-    pod 'GoogleMaps',       '>= 1.10.3'
-    pod 'Google/Analytics', '>= 1.1.0'
-    pod 'GoogleSignIn',     '>= 2.2.0'
+    pod 'GoogleMaps'
+    pod 'Google/Analytics'
+    pod 'GoogleSignIn'
     
-    pod 'FBSDKCoreKit',     '>= 4.8.0'
-    pod 'FBSDKLoginKit',    '>= 4.8.0'
+    pod 'FBSDKCoreKit'
+    pod 'FBSDKLoginKit'
     
-    pod 'Firebase',         '>= 2.4.3'
-    pod 'GeoFire',          '>= 1.1.2'
+    pod 'Firebase'
+    pod 'GeoFire'
     
-    pod 'DZNEmptyDataSet',  '>= 1.7.2'
+    pod 'DZNEmptyDataSet'
     
-    pod 'Alamofire',        '>= 3.1.3'
-    pod 'SwiftyJSON',       '>= 2.3.0'
+    # pod 'Alamofire'
+    # pod 'SwiftyJSON'
     
 end
 
